# departamento-software

./: .gga  .gitignore  AGENTS-sandbox.md  AGENTS.md  CLAUDE.md  DEPARTAMENTO-DE-SOFTWARE.md  NORTE.md  PROTOCOLO-CIERRE-SESION.md  PROTOCOLO-CONSTRUCCION-CODIGO.md  PROTOCOLO-INICIO-CHAT.md  README.md  SIGUIENTE-SESION.md  SISTEMA-DE-TRABAJO.md
framework/: pyproject.toml
framework/sigma/auto_fix_mechanic/: __init__.py  cli.py  invoker.py  loader.py  models.py  orchestrator.py  preflight.py  rules.yaml  snapshot.py  verifier.py
framework/sigma/auto_fix_mechanic/codemods/: add_volatile_marker.py  console_to_json_structured.js  console_to_logger.js  infer_type_from_context.js  non_null_to_optional.js  package.json  rename_migration_timestamp.py
framework/sigma/auto_fix_mechanic/tests/: test_adversarial.py  test_cli.py  test_extensibility.py  test_idempotency.py  test_invoker.py  test_loader.py  test_m3_empirical.py  test_models.py  test_orchestrator.py  test_preflight.py  test_snapshot.py  test_verifier.py
framework/sigma/correction_adr_draft/: __init__.py  cli.py  cwe_links.py  drafter.py  models.py  numbering.py
framework/sigma/correction_adr_draft/tests/: test_cli.py  test_drafter.py  (+2 more)
framework/sigma/correction_agent_bounded/: __init__.py  cli.py  context_loader.py  llm_client.py  models.py  orchestrator.py  patcher.py  prompt_builder.py  template_loader.py  verifier.py
framework/sigma/finding_classifier/: __init__.py  classifier.py  cli.py  loader.py  models.py  rules.yaml
framework/sigma/pipeline/: __init__.py  cli.py  dispatcher.py  models.py
(+211 files in other folders)
