[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sigma-framework"
version = "0.1.0"
description = "SigmaControl Framework — capa correctiva determinística + scope-aware verification (ADR-011)"
requires-python = ">=3.10"
dependencies = [
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
]

[project.scripts]
sigma-classify = "sigma.finding_classifier.cli:main"

[tool.setuptools.packages.find]
include = ["sigma*"]

[tool.pytest.ini_options]
testpaths = ["sigma"]
python_files = ["test_*.py"]
